added functioning  addtocart buttons

--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
         <button class="thebtn">view</button>
         <button class="thebtn">view</button>
     </div>
-    <div id = 'display1'>
+   <div id = "display1">
+    <h2>recently added carts</h2>
 
-    </div>
-    
-   
+   </div>
 </body>
 </html>
