adding a sign up platform

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <img src="https://technologystudent.com/despro_flsh/qual1a.gif" alt="none">
     </div>
     </div>
+    <div id = "display2"></div>
    
     <div class="viewbtn2">
         <button class="thebtn" id="btn1">view</button>
